--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,19 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 80px; /* optional: useful if you have a fixed/sticky header */
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+
 @keyframes fade-in {
   from {
     opacity: 0; /* Start slightly lower */
