--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "tailwindcss";
+
+
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 80px; /* optional: useful if you have a fixed/sticky header */
@@ -16,13 +20,7 @@ html {
 }
 
 
-html,
-body,
-#__next {
-  height: 100%;
-  margin: 0;
-  background-color: black; /* fallback for small screens */
-}
+
 
 
 
@@ -113,6 +111,8 @@ body,
         --secondary: #fff;
         --neutral: #b1b0b0;
         --primary: #000;
+        font-family: 'Poppins', ui-sans-serif, system-ui;
+        
     }
     .dark{
            --neutral: #f3161600;
@@ -136,7 +136,7 @@ body,
         @apply text-xl font-semibold
     }
     button{
-        @apply bg-primary border-2 border-neutral py-2 px-5 rounded-xl text-[18px]
+        @apply bg-primary py-2 px-5 rounded-xl text-[18px]
     }
     
 }
