--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 
 @import "tailwindcss";
 
-
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 80px; /* optional: useful if you have a fixed/sticky header */
@@ -41,7 +40,21 @@ html {
     opacity: 1;
     transform: translateY(0);
   }
+  
 }
+@keyframes fade-in-down {
+  from {
+    opacity: 0;
+    transform: translateY(-20px); /* Start slightly lower */
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+}
+
+
 @keyframes fade-in-right {
   from {
     opacity: 0;
@@ -50,6 +63,16 @@ html {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@keyframes fade-in-left {
+  from {
+    opacity: 0;
+    transform: translateX(30px); /* start off to the right */
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0); /* end at normal position */
   }
 }
 
@@ -93,6 +116,13 @@ html {
        animation: fade-in-right 1s ease-in-out forwards;
 
   }
+  .fade-in-left {
+  animation: fade-in-left 1s ease-in-out forwards;
+}
+  .fade-in-down {
+  animation: fade-in-down 1s ease-in-out forwards;
+}
+
 
 }
 
